// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/ListingActions > RowActions > should render Bucket directory 1`] = `
<div
  class="ListingActions-root"
>
  <div
    class="ListingActions-wrapper"
  >
    <div
      class="ListingActions-container"
    >
      <button
        class="ListingActions-root ListingActions-item"
        title="Delete"
      >
        <span>
          delete
        </span>
      </button>
      <button
        class="ListingActions-root ListingActions-item"
        title="Bookmark"
      >
        <span>
          turned_in_not
        </span>
      </button>
      <form
        action="/zip/dir/bucketA/dirB/"
        class="ListingActions-item"
        method="POST"
        style="flex-shrink: 0;"
      >
        <input
          name="token"
          type="hidden"
          value="ABC"
        />
        <button
          class="ListingActions-root ListingActions-item"
          title="Download"
          type="submit"
        >
          <span>
            arrow_downward
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions > RowActions > should render Bucket file 1`] = `
<div
  class="ListingActions-root"
>
  <div
    class="ListingActions-wrapper"
  >
    <div
      class="ListingActions-container"
    >
      <button
        class="ListingActions-root ListingActions-item"
        title="Delete"
      >
        <span>
          delete
        </span>
      </button>
      <button
        class="ListingActions-root ListingActions-item"
        title="Bookmark"
      >
        <span>
          turned_in_not
        </span>
      </button>
      <a
        class="ListingActions-root ListingActions-item"
        download=""
        href="s3://bucketA/fileB"
        title="Download"
      >
        <span>
          arrow_downward
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions > RowActions > should render Bucket file without download button 1`] = `
<div
  class="ListingActions-root"
>
  <div
    class="ListingActions-wrapper"
  >
    <div
      class="ListingActions-container"
    >
      <button
        class="ListingActions-root ListingActions-item"
        title="Delete"
      >
        <span>
          delete
        </span>
      </button>
      <button
        class="ListingActions-root ListingActions-item"
        title="Bookmark"
      >
        <span>
          turned_in_not
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions > RowActions > should render Package directory 1`] = `
<div
  class="ListingActions-root"
>
  <div
    class="ListingActions-wrapper"
  >
    <div
      class="ListingActions-container"
    >
      <form
        action="/zip/package/bucketA/namespaceB/nameC/latest/dirD/"
        class="ListingActions-item"
        method="POST"
        style="flex-shrink: 0;"
      >
        <input
          name="token"
          type="hidden"
          value="ABC"
        />
        <button
          class="ListingActions-root"
          title="Download"
          type="submit"
        >
          <span>
            arrow_downward
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions > RowActions > should render Package directory without download button 1`] = `null`;

exports[`components/ListingActions > RowActions > should render Package file 1`] = `
<div
  class="ListingActions-root"
>
  <div
    class="ListingActions-wrapper"
  >
    <div
      class="ListingActions-container"
    >
      <a
        class="ListingActions-root ListingActions-item"
        download=""
        href="s3://bucketa/pathB/fileB"
        title="Download"
      >
        <span>
          arrow_downward
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`components/ListingActions > RowActions > should render Package file without download button 1`] = `null`;

exports[`components/ListingActions > RowActions > should render nothing if archived 1`] = `null`;

exports[`components/ListingActions > RowActions > should render nothing if no route 1`] = `null`;

exports[`components/ListingActions > RowActions > should render nothing if wrong route 1`] = `null`;
